[package]
name = "cuntpressor"
version = "0.1.2"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "A brutal dsp compressor, forcing the RMS of a signal to ~+/-1.0 unless silent."
readme = "README.md"
keywords = ["audio", "dsp", "dynamics", "compression", "brutal"]
license = "MIT"
repository = "https://github.com/RustAudio/dsp-chain.git"
homepage = "https://github.com/RustAudio/dsp-chain"


[dependencies]
compressor = "0.3"
dsp-chain = "0.13"
time_calc = "0.11"

[dev-dependencies]
portaudio = "0.6.3"
